@@ -1,5 +1,5 @@
 Package: clustMixType
-Version: 0.3-5
+Version: 0.3-6
 Date: 2022-12-06
 Title: k-Prototypes Clustering for Mixed Variable-Type Data
 Author: Gero Szepannek [aut, cre], Rabea Aschenbruck [aut]
